# glyphweave

./: .gitignore  README.md  pyproject.toml  single_fs_mount_capacity.py
app/: __main__.py  cli.py  config.py  main.py
app/core/: __init__.py  runtime_layout.py  vault_layout.py
app/core/crypto/: __init__.py  constants.py  types.py
app/core/crypto/primitives/: __init__.py  aes_gcm.py  key_derivation.py  key_wrapping.py  secure_memory.py
app/core/crypto/service/: __init__.py  encryption_service.py  key_service.py  utils.py
app/core/crypto/services/: __init__.py  key_service.py  recovery_service.py  (+1 more)
app/core/database/: WAL_entry.py  __init__.py  base.py  file_blob_reference.py  file_entry.py  file_reference.py  folder.py  search_index.py
app/core/extractor/: k.py
app/core/fuse/: __init__.py  meta_store.py  mount_runner.py  temp_store.py  types.py
app/core/service/: __init__.py  launcher_service.py  models.py  registry_service.py  safe_paths.py  vault_file_fallback.py  vault_file_import.py  vault_file_mounts.py  vault_file_opening.py  vault_file_service.py  vault_file_sessions.py  vault_runtime_bootstrap.py  vault_runtime_service.py  vault_runtime_state.py  vault_service.py
app/core/sync/: __init__.py  vault_service.py
app/exceptions/: crypto.py
app/utils/: __init__.py  file_extensions.py  logging.py
tests/: __init__.py  test_main_paths.py  test_mount_lifecycle.py
tests/core/database/: test_encryption.py
tests/core/test_fuse/: __init__.py  conftest.py  test_file_handle.py  test_mounts.py  test_single_fs.py  test_temp_store.py  test_wal_service.py
(+37 files in other folders)
