[project]
name = "glyphweave"
version = "0.1.0"
description = "Privacy-focused, local-first document management with zero-knowledge cloud storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.4",
    "kreuzberg>=4.4.1",
    "mfusepy>=3.1.0",
    "mnemonic>=0.21",
    "openpyxl>=3.1.5",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.46",
    "sqlcipher3-wheels>=0.5.7",
]

[project.scripts]
glyphweave = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "pytest>=9.0.2",
    "ruff>=0.9.9",
]

[tool.ruff]
include = ["app/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_tmp", "test_runs_tmp", ".pytest_tmp", ".pytest_tmp_run1"]
